
py.install_sources([
    '__init__.py',
    'test_array_like.py',
    'test_debug.py',
    'test_deprecation.py',
    'test_enum.py',
    'test_external_resources.py',
    'test_launcher.py',
    'test_launcher_command.py',
    'test_number.py',
    'test_proxy.py',
    'test_retry.py',
    'test_testutils.py',
    'test_weakref.py',
],
pure: false,    # Will be installed next to binaries
subdir: 'silx/utils/test',  # Folder relative to site-packages to install to
)
